select and append

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
 
 <script>
-d3.select("body").append("p").text("Hello Vinod Welcome!");
+d3.select("body")
+.append("p")
+.style("color","red")
+.text("Hello Vinod Welcome!");
 </script>
 
 </body>
