--- a/index.html
+++ b/index.html
@@ -13,20 +13,31 @@
 
 <script>
 
-var dataArray = [20,40,50];
+var dataArray = [5,40,50, 60];
+var width = 500;
+var height = 500;
+
+var widthscale = d3.scale.linear()
+				 .domain([0,60])
+				 .range([0,width]);
+
+var color = d3.scale.linear()
+			.domain([0,60])
+			.range(["red","blue"]);
 
 var canvas = d3.select("body")
   .append("svg")
-  .attr("width",500)
-  .attr("height",500);
+  .attr("width",width)
+  .attr("height",height);
 
 var bars = canvas.selectAll("rect")
 				 .data(dataArray)
 				 .enter()
 				 	.append("rect")
-				 	.attr("width", function(d){return d * 10;})
+				 	.attr("width", function(d){return widthscale(d);})
 				 	.attr("height", 50)
-				 	.attr("y",function(d,i){return i*100;})
+				 	.attr("fill",function(d){return color(d)})
+				 	.attr("y",function(d,i){return i*100;});
 
 </script>
 
